<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3B6B6"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#6FBACDBB"
        android:ems="10"
        android:gravity="right|center_vertical|bottom"
        android:maxLength="12"
        android:padding="10dp"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/llOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="#E2EAD5D5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btnEight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btnNine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnDivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/hi" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E2EAD5D5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btnFive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btnSix"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnMultiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_multiply" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E2EAD5D5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btnTwo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btnThree"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnSubtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_minus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E2EAD5D5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDecimal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/_dot" />

        <Button
            android:id="@+id/btnZero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/_clr" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/_plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E2EAD5D5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:onClick="onEqual"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>